# heimdallr

./: .ottotime  Cargo.toml  LICENSE  README.md  docker-compose.yml
migrations/: 20240101000000_initial_migration.sql
src/: main.rs
src/db/: mod.rs
src/oidc/: authorize.rs  mod.rs
