[package]
name = "heimdallr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.7.9", features = ["macros"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8.2", features = ["migrate", "postgres", "runtime-tokio"] }
tokio = { version = "1.42.0", features = ["full"] }
utoipa = { version = "5.3.0", features = ["axum_extras"] }
utoipa-axum = { version = "0.1.3" }
utoipa-scalar = { version = "0.2.0", features = ["axum"] }
